--- a/index.html
+++ b/index.html
@@ -1,73 +1,109 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/master.css">
     <meta charset="utf-8">
     <title>MEMORY</title>
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   </head>
-  <!-- inizio progetto gioco memory -->
   <body>
+        <header>
+             <h1>MEMORY-GAME</h1>
+             <h3>METTI A PROVA LA TUA MEMORIA</h3>
+        </header>
 
-<div class="container">
-    <header>
-      <h1>MEMORY GAME</h1>
-    </header>
 
-        <main>
-                <div class="LINE">
-                  <!-- prima linea di carte  -->
-                  <div class="CARD prima">
-
-                  </div>
-                  <div class="CARD 2">
-
-                  </div>
-                  <div class="CARD 3">
-
-                  </div>
-                  <div class="CARD">
-
-                  </div>
+          <main>
+            <div class="row">
+                <div class="card prima">
+                    <div class="testo">
+                          <h2>Boolean</h2>
+                    </div>
                 </div>
-           <!-- fine prima linea di carte -->
 
-           <!-- seconda linea di carte -->
-              <div class="LINE">
-                <div class="CARD">
-
+                <div class="card seconda">
+                    <div class="testo">
+                          <h2>Boolean</h2>
+                    </div>
                 </div>
-                <div class="CARD">
 
+                <div class="card terza">
+                    <div class="testo">
+                          <h2>Boolean</h2>
+                    </div>
                 </div>
-                <div class="CARD">
+
+                <div class="card quarta">
+                    <div class="testo">
+                          <h2>Boolean</h2>
+                    </div>
+                </div>
 
                 </div>
-                <div class="CARD">
+                <!-- linea numero due -->
 
-                </div>
-              </div>
-        <!-- fine seconda linea di carte  -->
 
-        <!-- terza ed ultima linea di carte -->
-              <div class="LINE">
-                <div class="CARD">
+                <div class="row">
+                    <div class="card quinta">
+                        <div class="testo">
+                              <h2>Boolean</h2>
+                        </div>
+                    </div>
 
-                </div>
-                <div class="CARD prima">
+                    <div class="card sesta">
+                        <div class="testo">
+                              <h2>Boolean</h2>
+                        </div>
+                    </div>
 
-                </div>
-                <div class="CARD">
+                    <div class="card sette">
+                        <div class="testo">
+                              <h2>Boolean</h2>
+                        </div>
+                    </div>
 
-                </div>
-                <div class="CARD">
+                    <div class="card ottava">
+                        <div class="testo">
+                              <h2>Boolean</h2>
+                        </div>
+                    </div>
 
-                </div>
-              </div>
-          <!-- fine ultima linea di carte e main -->
-        </main>
-</div>
+                    </div>
 
+                    <!-- linea numero tre -->
+
+                    <div class="row">
+                        <div class="card nona">
+                            <div class="testo">
+                                  <h2>Boolean</h2>
+                            </div>
+                        </div>
+
+                        <div class="card decima">
+                            <div class="testo">
+                                  <h2>Boolean</h2>
+                            </div>
+                        </div>
+
+                        <div class="card undicesima">
+                            <div class="testo">
+                                  <h2>Boolean</h2>
+                            </div>
+                        </div>
+
+                        <div class="card ottava">
+                            <div class="testo">
+                                  <h2>Boolean</h2>
+                            </div>
+                        </div>
+
+                        </div>
+          </main>
+          <footer>
+            <p><STRONG>COPYRIGHT BY SEBA.MINOTTI</STRONG></p>
+
+          </footer>
   </body>
 </html>
